--- a/resources/animations/enemy_weasel_animation.json
+++ b/resources/animations/enemy_weasel_animation.json
@@ -11,9 +11,18 @@
       "y_start": "31",
       "frame_width": "63",
       "frame_height": "57",
-      "speed" : "1",
-      "loop" : true,
-      "frame_time": [10, 1, 1, 1, 1, 1, 1, 1]
+      "speed": "1",
+      "loop": true,
+      "frame_time": [
+        10,
+        1,
+        1,
+        1,
+        1,
+        1,
+        1,
+        1
+      ]
     },
     {
       "name": "run",
@@ -22,14 +31,21 @@
       "y_start": "29",
       "frame_width": "81",
       "frame_height": "59",
-      "speed" : "2",
-      "loop" : true
+      "speed": "2",
+      "loop": true
     },
     {
       "name": "none"
     },
     {
-      "name": "none"
+      "name": "attack",
+      "columns": "5",
+      "x_start": "0",
+      "y_start": "0",
+      "frame_width": "100",
+      "frame_height": "88",
+      "speed": "2",
+      "loop": true
     },
     {
       "name": "damage",
@@ -38,8 +54,8 @@
       "y_start": "30",
       "frame_width": "66",
       "frame_height": "57",
-      "speed" : "1",
-      "loop" : false
+      "speed": "1",
+      "loop": false
     },
     {
       "name": "dead",
@@ -48,8 +64,8 @@
       "y_start": "32",
       "frame_width": "64",
       "frame_height": "56",
-      "speed" : "1",
-      "loop" : false
+      "speed": "1",
+      "loop": false
     }
   ]
 }
