--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,13 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.41.2.1</version>
+        </dependency>
 
     </dependencies>
-
 
 
 </project>
